examples/passing/ModuleDeps/M1.purs
module M1 where

import M2

foo = M2.bar
