examples/failing/ImportExplicit/M1.purs
module M1 where

foo = "foo"
